<?xml version="1.0" encoding="utf-8"?>
   <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
	    xmlns:tools="http://schemas.android.com/tools"
	    tools:context="com.snbc.sdkexample.SampleList.MainView.MainActivity" 
	    
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
       >
       <LinearLayout
      
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
        android:orientation="vertical" >
        <Button
            android:id="@+id/btn_connectPrinter"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect_printer" >
        </Button>

        <Button
            android:id="@+id/btn_query_status"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/query_printer_status" >
        </Button>

        <Button
            android:id="@+id/btn_print_in_font"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/print_with_in_font" />

        <Button
            android:id="@+id/btn_print_with_custom_font"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/print_with_custom_font" />

        <Button
            android:id="@+id/btn_print_barcode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/print_barcode" />

        <Button
            android:id="@+id/btn_print_graphics"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/print_graphics" />

        <Button
            android:id="@+id/btn_print_image"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/print_image" />

        <Button
            android:id="@+id/btn_print_label"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/print_label" />

        <Button
            android:id="@+id/btn_print_label_with_format"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/print_label_with_format" />

        <Button
            android:id="@+id/btn_printer_configuration"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/printer_configuration" />

        <Button
            android:id="@+id/btn_download_image"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_image" />

        <Button
            android:id="@+id/btn_download_font"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_font" />
        <Button
            android:id="@+id/btn_download_format"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/download_format" />

        <Button
            android:id="@+id/btn_query_fonts"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/query_fonts" />

        <Button
            android:id="@+id/btn_query_images"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/query_images" />

        <Button
            android:id="@+id/btn_query_formats"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/query_formats" />

        <Button
            android:id="@+id/btn_direct_io"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/direct_io" />
               
    </LinearLayout> 
       
   </ScrollView>

