<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="@dimen/top_height"
        android:background="@color/color_top"
        >
       <TextView 
           android:id="@+id/tv_back_print_label"
           android:layout_alignParentLeft="true"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/back"
           android:textSize="@dimen/back_fontsize"
           android:layout_marginLeft="@dimen/back_margin_left"
           android:layout_centerInParent="true"
           />
       <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/print_label"
           android:textSize="@dimen/title_fontsize"
           android:textStyle="bold"
           android:gravity="center"
           android:layout_centerInParent="true"
           /> 
        
    </RelativeLayout>
   
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical">
     <LinearLayout 
        android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
         >
         <TextView 
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_weight="2"
             android:text="@string/label"
             />
         <Spinner 
             android:id="@+id/sp_print_label"
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_weight="3"
             />
    	</LinearLayout>
	    <Button 
	        android:id="@+id/btn_print_label"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/activity_vertical_margin"
	        android:text="@string/print"
	        />
	    	

	</LinearLayout>
    
</LinearLayout>
