<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="@dimen/top_height"
        android:background="@color/color_top"
        >
       <TextView 
           android:id="@+id/tv_back_print_graphics"
           android:layout_alignParentLeft="true"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="@dimen/back_margin_left"
           android:text="@string/back"
           android:textSize="@dimen/back_fontsize"
           android:layout_centerInParent="true"
           />
       <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/print_graphics"
           android:textStyle="bold"
           android:textSize="@dimen/title_fontsize"
           android:gravity="center"
           android:layout_centerInParent="true"
           /> 
        
    </RelativeLayout>
   
	<LinearLayout android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical">
     

	    <Button 
	        android:id="@+id/btn_print_graphics"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/print"
	        />
	    
	    
	</LinearLayout>
    
</LinearLayout>
